# eng-mgr-take-home-challenge

./: .env.dev  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pom.xml
.github/workflows/: app-build.yaml  python-build.yml
sql/: data.sql  schema.sql
src/main/java/com/manager/takehome/challenge/: SpotHeroApplication.java
src/main/java/com/manager/takehome/challenge/adapter/: WorkedHoursRecordRequestAdapter.java
src/main/java/com/manager/takehome/challenge/builder/: ActiveUsersRetrievalResponseBuilder.java  (+2 more)
src/main/resources/: application.yml  logback.xml
src/main/resources/api_contract_schema_specs/v1/: active_users_retrieval_response.json  error.json  user.json  worked_hours.json  worked_hours_postage_request.json  worked_hours_postage_response.json  worked_hours_record_request.json  worked_hours_record_response.json  worked_hours_retrieval_response.json
src/test/java/TestUtils/: TestConstants.java
src/test/java/testUtils/: TestConstants.java
src/test/java/unitTests/: ActiveUserRetrievalResponseBuilderTests.java  WorkedHoursRecordRequestAdapterTests.java  WorkedHoursRecordResponseBuilderTests.java  WorkedHoursRetrievalResponseBuilderTests.java
src/test/resources/: application.yml
usersapp/: Makefile  docker-compose.yml  mypy.ini  pyproject.toml
usersapp/alembic/: env.py
usersapp/alembic/versions/: 9ee64c80ba45_create_initial_tables.py
usersapp/test/: conftest.py  factories.py  test_models.py  test_service.py  test_services.py  test_usersapp.py
usersapp/usersapp/: cli.py  db.py  models.py  seed_db.py  services.py
(+27 files in other folders)
