[tool.poetry]
name = "usersapp"
version = "0.1.0"
description = ""
authors = ["Attila Domokos <adomokos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.scripts]
runapp = "usersapp.cli:run"

# addopts = "-rP" - to print output
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
