[tool.poetry]
name = "usersapp"
version = "0.1.0"
description = ""
authors = ["Attila Domokos <adomokos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3.22"
python-dotenv = "^0.15.0"
psycopg2-binary = "^2.8.6"
pyservice = "^0.0.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^20.8b1"
autoflake = "^1.4"
mypy = "^0.800"
alembic = "^1.5.2"
sqlalchemy-stubs = "^0.4"

[tool.poetry.scripts]
runapp = "usersapp.cli:run"
seed_db = "usersapp.seed_db:run"

# addopts = "-rP" - to print output
# addopts = "-ra -q"
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
